tests/agl/rejections/type/field_directed_unknown_bare_name.agl
enum Flag
  | on
  | off

enum Packet
  | packet(flag: Flag)

let item = packet(Flag::on)
case item of
  | packet(captured) => 1
  | packet(_) => 0
